TEST_PROGRAMS/VALID/04/tricky-comments2.go
package/**/main;func/**/main(){var/**/x/**/int;x++;}
