TEST_PROGRAMS/INVALID/04/37.go
package main

func main() {
    //Illegal struct type
    var x struct{ foo; }
}
